# nosapi

./: .eslintrc.cjs  .gitignore  .neoconf.json  .npmrc  .prettierignore  Cargo.toml  README.md  conventionalcommit.json  flake.nix  justfile  knope.toml  package.json  pnpm-lock.yaml  prettier.config.cjs  rust-toolchain.toml  treefmt.toml  tsconfig.eslint.json  tsconfig.json  tsup.config.ts  turbo.json  vitest.config.ts
.changes/: config.json
.changeset/: add_crate_documentation.md  config.json  empty-coins-look.md  implement_support_for_encodingdecoding_the_blackbox_string.md  implement_support_for_encryptingdecrypting_the_blackbox_string.md  implement_support_for_the_fingerprint_and_request_structs.md  implement_support_for_the_vector_string.md  ten-ghosts-greet.md  tidy-trains-clap.md
.github/: matcher.json
.github/workflows/: cd.yml  ci.yml  pr.yml  release.yml
.husky/: commit-msg
.run/: Test.run.xml
apps/nosapi_server/: CHANGELOG.md  Cargo.toml
apps/nosapi_server/src/: config.rs  main.rs  openapi.rs  rapidoc.rs
apps/nosapi_server/src/routes/: client.rs  hello.rs  mod.rs
apps/server/: Cargo.toml  README.md  Rocket.toml
apps/server/assets/rapidoc/: index.html
apps/server/src/: config.rs  main.rs  rapidoc.rs
apps/server/src/routes/: index.rs  serve.rs
apps/website/: .eslintrc.cjs  next.config.mjs  package.json  prettier.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.eslint.json  tsconfig.json
apps/website/src/: types.d.ts
apps/website/src/app/: layout.tsx  page.tsx
apps/website/src/app/api/client-version/: route.ts
apps/website/src/data/: gameforge.ts
crates/dummy/: Cargo.toml
crates/nosapi_blackbox/: CHANGELOG.md  Cargo.toml  README.md
crates/nosapi_blackbox/src/: constants.rs  lib.rs  utils.rs
crates/nosapi_blackbox/src/blackbox/: de.rs  error.rs  mod.rs  ser.rs  serde.rs  support.rs
crates/nosapi_blackbox/src/fingerprint/: error.rs  mod.rs  support.rs
crates/nosapi_blackbox/src/mock/: chrono.rs  rand.rs
crates/nosapi_blackbox/src/support/: b64.rs  mod.rs
crates/nosapi_blackbox/src/support/mockable/: chrono.rs  mod.rs  rand.rs
crates/nosapi_blackbox/src/vector/: de.rs  error.rs  mod.rs  ser.rs  support.rs
crates/nosapi_captcha/: Cargo.toml  README.md
crates/nosapi_captcha/src/: error.rs  lib.rs  types.rs
crates/nosapi_data/: CHANGELOG.md  Cargo.toml  README.md
crates/nosapi_data/src/: client.rs  exts.rs  lib.rs  macros.rs  prelude.rs  traits.rs
crates/nosapi_data/src/client/: error.rs  mod.rs
crates/nosapi_data/src/nos/: error.rs  mod.rs  text.rs  type.rs
crates/nosapi_data/src/nos/decrypt/: mod.rs  text.rs
crates/nosapi_data/tests/: client.rs
crates/nosapi_data/tests/nos/: main.rs  text.rs  type.rs
nix/: build.nix  shell.nix
nix/shell/: default.nix  treefmt.nix
nix/tools/: cargo-release.nix  cargo-wrapper.nix  knope.nix
nix/tools/napi-cli/: composition.nix  default.nix  node-packages.json  node-packages.nix
