[package]
name = "nosapi_server"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
okapi = "0.7.0-rc.1"
rocket = { version = "0.5.0-rc.2", features = ["json", "serde_json"] }
rocket-include-static-resources = { version = "0.10.3", features = ["cache"] }
rocket_okapi = { version = "0.8.0-rc.2", features = ["swagger", "rapidoc"] }
schemars = "0.8.12"
serde = { version = "1.0.182", features = ["derive"] }
nosapi_data = { path = "../../crates/nosapi_data" }
reqwest = "0.11.18"
