[package]
name = "nosapi_blackbox"
version = "0.1.0"
description = "A library for working with Gameforge's blackbox string"
keywords = ["nostale", "nosapi", "gameforge", "blackbox", "fingerprint"]
categories = ["parser-implementations", "parsing"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/zakuciael/nosapi"
homepage = "https://github.com/zakuciael/nosapi"
documentation = "https://docs.rs/nosapi_blackbox/"
edition.workspace = true
authors.workspace = true

[features]
default = []
builders = ["dep:bon"]

[dependencies]
base64 = "0.22.1"
bon = { version = "3.3.1", optional = true }
chrono = { version = "0.4.39", features = ["serde", "now"] }
rand = { version = "0.8.5", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_tuple_explicit = { version = "1.1.0" }
serde_with = { version = "3.12.0", features = ["base64"] }
percent-encoding = "2.3.1"
sha2 = "0.10.8"
thiserror = "2.0.9"
derive_more = { version = "2.0.1", features = ["constructor"] }

[dev-dependencies]
rstest = "0.23.0"
serde_plain = "1.0.2"
